--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
     <div id="window">
         <div id="modal-window">
             <div id="modal-header">
-                <h1>Modal Window</h1>
+                <h1 id="title"></h1>
                 <button id="close"><i class="fas fa-times"></i></button>
             </div>
             <div id="modal-body">
                 <p id="paragraph">
-                    Are you sure want to download this modal box?<br>
-                    Click 'OK' to start downloading.
+
                 </p>
                 <div id="case">
                     <input type="checkbox" name="text" id="input1" value="agree">
-                    <label for="input1"> Agree ou terms & conditions!</label>
+                    <label id="label1" for="input1"> </label>
                 </div>
             </div>
             <div id="modal-footer">
@@ -30,7 +29,6 @@
                 <button id="cancel">Cancel</button>
             </div>
         </div>
-
     </div>
 
     <script src="app.js"></script>
