--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
             </div>
             <div id="modal-footer">
                 <button id="ok">OK</button>
-                <span id="or"> Or </span>
-                <button id="cancel">Cancel</button>
+                <button id="closeWindow">Fermer la page</button>
+                <span id="or"> Ou </span>
+                <button id="cancel">Fermer</button>
             </div>
         </div>
     </div>
